Fix chart frame height overflow

--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -64,10 +64,13 @@
 
 .ls-timeseries__svg {
     width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .ls-timeseries__chart {
     position: relative;
+    height: 100%;
 }
 
 .ls-timeseries__bg {
